Commented out manual password entry, and added new task to generate and print a random password

--- a/create-dns-playbook.yaml
+++ b/create-dns-playbook.yaml
@@ -3,10 +3,11 @@
   hosts: pihole
   become: yes
   become_method: sudo
-  vars_prompt:
-    - name: "pihole_password"
-      prompt: "Enter Pi-Hole password"
-      private: yes
+  #Commented out for this commit, changed to generating a random password vice manual entry (line:113)
+  # vars_prompt: 
+  #   - name: "pihole_password"
+  #     prompt: "Enter Pi-Hole password"
+  #     private: yes
 
   handlers:
     - name: Restart Unbound
@@ -20,7 +21,7 @@
         state: restarted
 
   tasks:
-
+  
   - name: Check if Unbound is installed
     command: which unbound
     register: unbound_installed
@@ -109,6 +110,11 @@
     shell:
       cmd: pihole -up
 
+  - name: Generate the Pi-hole web password
+    shell:
+      cmd: openssl rand -base64 12
+    register: pihole_password
+
   - name: Change Pi-hole web password
     shell:
       cmd: "pihole -a -p {{ pihole_password }}"
@@ -120,3 +126,7 @@
     loop:
       - unbound
       - pihole-FTL
+
+  - name: Print the Pi-hole password
+    debug:
+      msg: "This password is not saved, use {{ pihole_password.stdout }} to access the Web Interface"
