--- a/iptables-playbook.yaml
+++ b/iptables-playbook.yaml
@@ -5,6 +5,9 @@
   become_method: sudo
   tasks:
 
+  #TODO put a warning, and a user validation that that running this playbook will 
+  #> clear out the target machines entire iptables
+
   - name: Perform an apt udpate
     apt:
       update_cache: yes
@@ -49,7 +52,7 @@
       - { chain: "INPUT", protocol: "tcp",  destination_port: "4711", in_interface: lo, jump: "ACCEPT", action: "insert", rule_num: "1", ip_version: "ipv4"}
       - { chain: "INPUT", protocol: "udp", match: "udp", source_port: "546:547",  destination_port: "546:547", jump: "ACCEPT", action: "insert", ip_version: "ipv6"}
 
-  - name: Allow DHCP Traffic
+  - name: Allow DHCP Traffic #Only needed if using Pi-hole as a DHCP Server
     iptables:
       chain: INPUT
       protocol: udp
