--- a/04-create-dns-playbook.yaml
+++ b/04-create-dns-playbook.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Turn a Pihole into a Recurrsive DNS
-  hosts: pihole
+  hosts: pihole2
   become: true
   handlers:
 
@@ -16,27 +16,15 @@
 
   tasks:
 
-    - name: Check if Unbound is installed
-      ansible.builtin.command: which unbound
-      register: unbound_installed
-      failed_when: false
-      changed_when: false
+    - name: Gather package facts
+      ansible.builtin.package_facts:
+        manager: apt
 
-    - name: Gather service facts
-      ansible.builtin.service_facts:
-      when: unbound_installed.rc != 0
-
-    - name: Check if Unbound service is running
-      ansible.builtin.debug:
-        var: services.unbound
-      when: unbound_installed.rc != 0
-
-    - name: Install Unbound Package if not already installed
-      ansible.builtin.apt:
+    - name: Install unbound if not already installed
+      ansible.builtin.apt: # Change to ansible.builtin.package if not using apt
         name: unbound
         state: present
-        update_cache: true
-      when: unbound_installed.rc != 0 and (not services.unbound or services.unbound.state != 'running')
+      when: '"unbound" not in ansible_facts.packages'
 
     - name: Ensure Logging Directory for Unbound exists
       ansible.builtin.file:
@@ -79,11 +67,25 @@
         - { path: "/etc/pihole/setupVars.conf", regexp: "^PIHOLE_DNS_1=", line: "PIHOLE_DNS_1=127.0.0.1#5335", backrefs: true, mode: "0644" }
         - { path: "/etc/pihole/setupVars.conf", regexp: "^PIHOLE_DNS_2=", state: "absent", mode: "0644" }
 
-    - name: Disable Unbound-ResolveConf.service
+    - name: Gather host information facts
+      ansible.builtin.setup:
+
+    - name: Check if OS is Debian Bullseye, to determine if extra steps must be conducted
+      ansible.builtin.debug:
+        msg: "The OS is Debian Bullseye"
+      when: ansible_facts['distribution'] == 'Debian' and ansible_facts['distribution_major_version'] == '11'
+
+    - name: OS is not Debian Bullseye
+      ansible.builtin.debug:
+        msg: "The OS is not Debian Bullseye"
+      when: not (ansible_facts['distribution'] == 'Debian' and ansible_facts['distribution_major_version'] == '11')
+
+    - name: Disable Unbound-ResolveConf.service (only if Debian Bullseye release)
       ansible.builtin.systemd:
         name: unbound-resolvconf.service
         enabled: false
         state: stopped
+      when: ansible_facts['distribution'] == 'Debian' and ansible_facts['distribution_major_version'] == '11'
 
     - name: Comment out unbound_conf line in /etc/resolveconf.conf
       ansible.builtin.lineinfile:
@@ -91,11 +93,13 @@
         regexp: '^unbound_conf='
         line: '#unbound_conf='
         backrefs: true
+      when: ansible_facts['distribution'] == 'Debian' and ansible_facts['distribution_major_version'] == '11'
 
     - name: Remove resolveconf_resolvers.conf file
       ansible.builtin.file:
         path: /etc/unbound/unbound.conf.d/resolvconf_resolvers.conf
         state: absent
+      when: ansible_facts['distribution'] == 'Debian' and ansible_facts['distribution_major_version'] == '11'
 
     - name: Ensure line is present in /etc/apparmor.d/local/usr.sbin.unbound # TODO Set file permissions
       ansible.builtin.lineinfile:
@@ -106,18 +110,30 @@
         mode: "0700"
       notify: Restart Unbound
 
-    - name: Update Pi-Hole
-      ansible.builtin.command: pihole -up
+    - name: Update Pi-hole
+      ansible.builtin.command:
+        cmd: pihole -up
+      register: pihole_update_status
+      changed_when: pihole_update_status is changed
 
     - name: Generate the Pi-hole web password
-      ansible.builtin.command: openssl rand -base64 12 # TODO move to variable in inventory to more easily allow users to decide password complexity
+      ansible.builtin.command:
+        cmd: openssl rand -base64 12 # TODO move to variable in inventory to more easily allow users to decide password complexity
       register: pihole_password
+      changed_when: pihole_password is changed
 
     - name: Change Pi-hole web password
-      ansible.builtin.command: "pihole -a -p {{ pihole_password.stdout }}"
+      ansible.builtin.command:
+        cmd: "pihole -a -p {{ pihole_password.stdout }}"
       notify: Restart Pi-Hole DNS
+      register: pihole_status
+      changed_when: pihole_status is changed
 
     - name: Print the Pi-hole password
       ansible.builtin.debug:
         msg: "This password will not be saved, use {{ pihole_password.stdout }} to access the Web Interface"
     # TODO Add ability to write password back to host running playbook
+
+    - name: Complete Message
+      ansible.builtin.debug:
+        msg: "Pi-hole and Unbound are intalled and configured, update your router settings to utilize"
