minor changes to 00 - 04 playbooks, added cron job playbook, indpendant pihole update, and new pihole change password playbook which allows the user to pick the pasword length during execution.

--- a/01-install-pihole-playbook.yaml
+++ b/01-install-pihole-playbook.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Check to See if Pi-Hole is installed, and Install if necessary
-  hosts: pihole2
+  hosts: pihole
   become: true
 
   tasks:
